[gd_scene load_steps=5 format=2]

[ext_resource path="res://PortalExitActivated.png" type="Texture" id=1]
[ext_resource path="res://PortalEntrance.gd" type="Script" id=2]
[ext_resource path="res://PortalExit.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 2 )

[node name="PortalExit" type="Node2D"]
script = ExtResource( 2 )
entrance = false

[node name="PortalSpriteActive" type="Sprite" parent="."]
visible = false
position = Vector2( 16, -24 )
texture = ExtResource( 1 )

[node name="PortalSprite" type="Sprite" parent="."]
position = Vector2( 16, -24 )
texture = ExtResource( 3 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
mode = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
polygon = PoolVector2Array( 2, -21, 0, -17, 0, 0, 32, 0, 32, -17, 30, -21, 28, -21, 28, -1, 4, -1, 4, -21 )

[node name="TeleportationArea" type="Area2D" parent="."]

[node name="TeleportationShape" type="CollisionShape2D" parent="TeleportationArea"]
visible = false
position = Vector2( 16, -2 )
shape = SubResource( 1 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_top = -42.0
margin_right = 32.0

[node name="PortalTelepoint" type="Node2D" parent="."]
position = Vector2( 16, -7 )

[connection signal="body_entered" from="TeleportationArea" to="." method="_on_TeleportationArea_body_entered"]
